--- a/css/curriculumvitae.css
+++ b/css/curriculumvitae.css
@@ -1,5 +1,3 @@
-/*@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');*/
-
 *{
 	margin: 0;
 	padding: 0;
@@ -38,14 +36,14 @@ body{
 .contenedor_curriculum .contenedor_izq .contenedor_img{
 	width: 100%;
 	border-radius: 100%;
-	border: 2px solid black;
+	border: 2px solid rgb(69, 4, 75);
 }
 
 .contenedor_curriculum .contenedor_izq .contenedor_img img{
 	width: 100%;
 	display: block;
 	border-radius: 100%;
-	border: 2px solid black;
+	border: 2px solid rgb(69, 4, 75);
 }
 
 .contenedor_curriculum .cont_titulo{
