--- a/css/menu.css
+++ b/css/menu.css
@@ -1,4 +1,3 @@
-
 * {
 	margin:0;
 	padding:0;
@@ -75,7 +74,7 @@ nav > ul li a {
 }
 
 nav > ul > li > ul > li a:hover {
-	background:#5da5a2;
+	background:#470b5a;
 }
 
 nav > ul > li > a span {
